# unwritten-exp

./: .gitignore  README.md  pyproject.toml  unwritten-addendum-a2-topology-items-ecology.md  unwritten-engine-design-specification.md  unwritten-generation-addendum-spec.md  unwritten-lab-experiments-repo-spec.md
docs/: ara-mapping.md
docs/spec-notes/: 2026-07-19-k2-drift-field-verdict.md  2026-07-19-k3-demotion-policy.md  2026-07-19-k5-predicate-vocabulary.md  README.md
exp/: __init__.py
exp/k1_hashrng/: README.md  __init__.py  __main__.py  statcheck.py  test_hashrng.py
exp/k2_gmm_dynamics/: README.md  __init__.py  __main__.py  fixtures.py  terrain.py  test_dynamics.py  test_terrain.py  test_village.py
exp/k3_collapse/: README.md  __init__.py  __main__.py  fixtures.py  test_collapse.py
exp/k4_counters/: README.md  __init__.py  __main__.py  fixtures.py  test_counters.py
exp/k5_promise_ledger/: README.md  __init__.py  __main__.py  fixtures.py  test_promise_ledger.py
exp/k6_gossip/: README.md  __init__.py  __main__.py  fixtures.py  network.py  rumor.py  test_gossip.py
kernel/: __init__.py  hashrng.py
kernel/collapse/: __init__.py  field.py  geometry.py  log.py  tiers.py
kernel/counters/: __init__.py  counters.py  laws.py
kernel/gmm_dynamics/: __init__.py  dynamics.py  gmm.py
kernel/promise_ledger/: __init__.py  ledger.py  predicates.py  promise.py
